--- a/BikeshareStrikeAnalysis.Rmd
+++ b/BikeshareStrikeAnalysis.Rmd
@@ -7,196 +7,310 @@ output:
         keep_md: true
 ---
 
-```{r setup, include=FALSE}
+```{r}
 library(stringr)
-options(scipen = 2, digits=4)
 library(knitr)
-opts_chunk$set(warning = FALSE, message = FALSE, error = FALSE, tidy = TRUE)
 library(dplyr)
 library(lubridate)
-library(anytime)
-```
-
-## Merging the data from each city
-
-```{r setup, include=FALSE}
-divvy = list.files(pattern = "Divvy.*\\.csv")
-cabi = list.files(pattern = "Cabi.*\\.csv")
-divvy = list.files(pattern = "Divvy.*\\.csv")
-indeg = list.files(pattern = "Indego.*\\.csv")
-hubway = list.files(pattern = "Hubway.*\\.csv")
-```
-
-## Chicago
-
-```{r setup, include=FALSE}
-chicago <- do.call(rbind, lapply(divvy, function(x) read.csv(x, stringsAsFactors = FALSE)))
-chicago$city <- "Chicago"
-head(chicago)
-
-chicago$starttime <- gsub(" .*", "", chicago$starttime)
-chicago$stoptime <- gsub(" .*", "", chicago$stoptime)
-
-chicagoClean <- subset(chicago, select = c(trip_id, tripduration, starttime, stoptime, usertype, city), stringsAsFactors = FALSE)
-
-names(chicagoClean) <- c("trip_id", "duration", "start_time", "end_time", "passholder_type", "city")
-head(chicagoClean)
-
-lct <- Sys.getlocale("LC_TIME"); Sys.setlocale("LC_TIME", "C")
-
-tester <- c("1/1/2016", "2/28/2016")
-anydate(tester)
-chicagoClean$start_time <- as.POSIXct(chicagoClean$start_time, format='%m/%d/%Y')
-chicagoClean$end_time <- as.POSIXct(chicagoClean$end_time, format='%m/%d/%Y')
-```
-
-## Boston
-
-```{r setup, include=FALSE}
-Boston = do.call(rbind, lapply(hubway, function(x) read.csv(x, stringsAsFactors = FALSE)))
-Boston$city <- "Boston"
-head(Boston)
-
-Boston$ID <- seq.int(nrow(Boston))
-
-bostonClean2 <- subset(Boston, select = c(ID, tripduration, starttime, stoptime, usertype, city))
-head(bostonClean)
-
-names(bostonClean2) <- c("trip_id", "duration", "start_time", "end_time", "passholder_type", "city")
-
-gsub("-", "/", bostonClean2$start_time)
-bostonClean2$newdate <- strftime(as.character(bostonClean2$start_time), "%m/%d/%Y")
-
-gsub("-", "/", bostonClean$end_time)
-bostonClean2$newenddate <- strftime(as.character(bostonClean2$end_time), "%m/%d/%Y")
-
-bostonClean <- subset(bostonClean2, select = c(trip_id, duration, newdate, newenddate, passholder_type, city))
-names(bostonClean) <- c("trip_id", "duration", "start_time", "end_time", "passholder_type", "city")
-format(as.Date(bostonClean$start_time, "%m %d %Y"))
-
-bostonClean$start_time <- as.POSIXct(bostonClean$start_time, format='%m/%d/%Y')
-bostonClean$end_time <- as.POSIXct(bostonClean$end_time, format='%m/%d/%Y')
-head(bostonClean)
-```
-
-##Philly
-```{r setup, include=FALSE}
-philly = do.call(rbind, lapply(indeg, function(x) read.csv(x, stringsAsFactors = FALSE)))
-philly$city <- "Philly"
-head(philly)
-
-philly$end_time <- gsub(" .*", "", philly$end_time)
-philly$start_time <- gsub(" .*", "", philly$start_time)
-
-phillyClean <- subset(philly, select = c(trip_id, duration, start_time, end_time, passholder_type, city))
-names(phillyClean) <- c("trip_id", "duration", "start_time", "end_time", "passholder_type", "city")
-
-tester <- c("1/1/16", "01/1/2016", "02/02/15", "02/02/2015")
-
-parse_date_time(phillyClean$start_time, c('%m%d%y', '%m%d%Y'))
-format(phillyClean$start_time, '%m%d%Y')
-format(phillyClean$end_time, '%m%d%Y')
-
-
-
-phillyClean$start_time <- as.POSIXct(phillyClean$start_time, format='%m/%d/%Y')
-phillyClean$end_time <- as.POSIXct(phillyClean$end_time, format='%m/%d/%Y')
-head(phillyClean)
-```
-
-##Washington 
-```{r setup, include=FALSE}
-washington = do.call(rbind, lapply(cabi, function(x) read.csv(x, stringsAsFactors = FALSE)))
-washington$city = "Washington"
-washington$start_time <- gsub(" .*", "", washington$start_time)
-washington$end_time <- gsub(" .*", "", washington$end_time)
-
-head(washington)
-
-washingtonClean <- subset(washington, select = c("trip_id", "duration", "start_time", "end_time", "passholder_type", "city"))
-names(washingtonClean) <- c("trip_id", "duration", "start_time", "end_time", "passholder_type", "city")
-
-washingtonClean$start_time <- as.POSIXct(washingtonClean$start_time, format='%m/%d/%Y')
-washingtonClean$end_time <- as.POSIXct(washingtonClean$end_time, format='%m/%d/%Y', '%m/%d/%y')
-washingtonClean$duration <- washingtonClean$duration/1000
-head(washingtonClean)
-```
-
-## Appending data
-```{r setup, include=FALSE}
-strikeData <- rbind(chicagoClean, phillyClean, washingtonClean, bostonClean)
-head(strikeData)
-
-write.csv(strikeData, file = "C:/Users/Richard Buote/Desktop/strikeData.csv")
-```
-
-## Cleaning and recoding
-
-```{r setup, include=FALSE}
-strikeData$month <- month(strikeData$start_time)
-strikeData$day <- day(strikeData$start_time)
-strikeData$year <- year(strikeData$start_time)
-
-strikeData <- filter(strikeData, year > 2015)
-
-strikeData$memberType <- car::recode(strikeData$passholder_type, "'Customer'='shortterm';
-'Subscriber'='member';
-                                     'Indego30'='member';
-                                     'IndegoFlex'='shortterm';
-                                     'Walk-up'='shortterm'; 
-                                     'Registered' = 'member';
-                                     'Casual' = 'shortterm';
-                                     'Dependent'=NA;",
-                                     as.factor.result = TRUE)
-
-table(strikeData$memberType, strikeData$passholder_type)
-
-table(strikeData$passholder_type)
-```
-
-strikeData1 <- strikeData %>% group_by(year, month, day, city) %>% summarise(sumDuration = sum(duration,
-                                                                                               na.rm = TRUE), mDuration = mean(duration, na.rm = TRUE), total = n())
-
-strikeData1$date = dmy(paste(strikeData1$day, strikeData1$month, strikeData1$year))
-
 library(ggplot2)
+library(ggplot2)
+library(forecast)
+library(tseries)
+library(formatR)
 
-test <- ggplot(strikeData1, aes(x = date, y = total)) + geom_rect(aes(xmin = as.Date("2016-11-01",
-                                                                                     format = "%Y-%m-%d"), xmax = as.Date("2016-11-07", format = "%Y-%m-%d"),
-                                                                      ymin = 0, ymax = Inf), alpha = 0.9, fill = "grey") + geom_line(aes(color = factor(city))) +
-  theme(axis.line = element_line(colour = "black"), panel.background = element_blank(),
-        axis.title = element_text(size = 16), text = element_text(size = 14)) +
-  xlab("Date") + ylab("Number of Trips per Day") +
-  scale_colour_discrete(name = "Cities", breaks = c("Chicago", "Philly", "Washington", "Boston"), labels = c("Chicago", "Philly", "Washington", "Boston"))
+options(scipen = 2, digits=4)
+opts_chunk$set(warning = FALSE, message = FALSE, error = FALSE, tidy = TRUE)
+```
 
-print(test)
+```{r}
+city_data <- read.csv("https://raw.githubusercontent.com/walkabilly/Phillybikeshare/master/CityColl.csv")
+member_data <- read.csv("https://raw.githubusercontent.com/walkabilly/Phillybikeshare/master/MemberColl.csv")
 
-write.csv(strikeData, file = "StrikeDatafour.csv")
+### Convert start_time from factor to date
+city_data$start_time <- mdy(city_data$start_time)
+member_data$start_time <- mdy(member_data$start_time)
+```
 
-strikeData2 <- strikeData %>% group_by(year, month, day, city, memberType) %>% summarise(sumDuration = sum(duration,
-                                                                                               na.rm = TRUE), mDuration = mean(duration, na.rm = TRUE), total = n())
-strikeData2$date = dmy(paste(strikeData2$day, strikeData2$month, strikeData2$year))
+### Time Series Plot 
 
-test2 <- ggplot(strikeData2, aes(x = date, y = total)) + geom_rect(aes(xmin = as.Date("2016-11-01",
-                                                                                     format = "%Y-%m-%d"), xmax = as.Date("2016-11-07", format = "%Y-%m-%d"),
-                                                                      ymin = 0, ymax = Inf), alpha = 0.9, fill = "grey") + geom_line(aes(color = factor(memberType))) +
-  theme(axis.line = element_line(colour = "black"), panel.background = element_blank(),
-        axis.title = element_text(size = 16), text = element_text(size = 14)) +
-  xlab("Date") + ylab("Number of Trips per Day") +
-  scale_colour_discrete(name = "Member Type", breaks = c("member", "shortterm"), labels = c("Member", "Short Term"))
+#### All bikeshare users (members and non-members)
 
-print(test2)
+```{r}
+cityplot <- ggplot(data = city_data, aes(x = start_time, y = by100000)) +
+  geom_line() +
+  stat_smooth(aes(group = dummy), method = "lm", formula = y ~ poly(x, 2), se = FALSE) +
+  geom_vline(xintercept=as.numeric(city_data$start_time[1398]), linetype=4) + 
+  facet_wrap(~ city) + 
+  theme_classic()
+  
 
-##Export data
+plot(cityplot)
+```
 
-write.table(strikeData, "C:/Users/Richard Buote/Desktop/strikeData.csv", sep=",")
-write.table(summarytest, "C:/Users/Richard Buote/Desktop/summarytest.csv", sep=",")
+#### Bikeshare member type by city
 
+#### Philadelphia
 
-##by day, trips, and duration
+```{r}
+philly_data <- filter(member_data, city == "Philly")
 
-summarytest <- strikeData %>%
-  group_by(start_time) %>%
-  summarize(mean_duration = mean(duration), number_trips = n())
+philly_member_plot <- ggplot(data = philly_data, aes(x = start_time, y = by10000)) +
+  geom_line() +
+  stat_smooth(aes(group = dummy), method = "lm", formula = y ~ poly(x, 2), se = FALSE) +
+  geom_vline(xintercept=as.numeric(city_data$start_time[1398]), linetype=4) + 
+  facet_wrap(~ membertype) + 
+  theme_classic()
+  
+plot(philly_member_plot)
+```
+
+#### Boston
+
+```{r}
+boston_data <- filter(member_data, city == "Boston")
+
+boston_member_plot <- ggplot(data = boston_data, aes(x = start_time, y = by10000)) +
+  geom_line() +
+  stat_smooth(aes(group = dummy), method = "lm", formula = y ~ poly(x, 2), se = FALSE) +
+  geom_vline(xintercept=as.numeric(city_data$start_time[1398]), linetype=4) + 
+  facet_wrap(~ membertype) + 
+  theme_classic()
+  
+plot(boston_member_plot)
+```
+
+#### Chicago
+
+```{r}
+chicago_data <- filter(member_data, city == "Chicago")
+
+chicago_member_plot <- ggplot(data = chicago_data, aes(x = start_time, y = by10000)) +
+  geom_line() +
+  stat_smooth(aes(group = dummy), method = "lm", formula = y ~ poly(x, 2), se = FALSE) +
+  geom_vline(xintercept=as.numeric(city_data$start_time[1398]), linetype=4) + 
+  facet_wrap(~ membertype) + 
+  theme_classic()
+  
+plot(chicago_member_plot)
+```
+
+#### Washington
+
+```{r}
+Washington_data <- filter(member_data, city == "Washington")
+
+washington_member_plot <- ggplot(data = Washington_data, aes(x = start_time, y = by10000)) +
+  geom_line() +
+  stat_smooth(aes(group = dummy), method = "lm", formula = y ~ poly(x, 2), se = FALSE) +
+  geom_vline(xintercept=as.numeric(city_data$start_time[1398]), linetype=4) + 
+  facet_wrap(~ membertype) + 
+  theme_classic()
+  
+plot(washington_member_plot)
+```
+
+### Linear Model
+
+```{r}
+lm2citycoll <- lm(number_trips ~ start_time + dummy + start_time*dummy, data=city_data)
+summary(lm2citycoll)
+
+lm3citycoll <- lm(number_trips ~ start_time + dummy + city + start_time*dummy + city*dummy, data=city_data)
+summary(lm3citycoll)
+
+lm2by100k <- lm(by100000 ~ start_time + dummy + start_time*dummy, data=city_data)
+summary(lm2by100k)
+
+lm3by100k <- lm(by100000 ~ start_time + dummy + city + start_time*dummy + city*dummy, data=city_data)
+summary(lm3by100k)
+```
+
+```
+##Boston Moving Average
+
+bostoncoll$Date = as.Date(bostoncoll$start_time)
+
+ggplot(bostoncoll, aes(Date, by100000)) +
+  geom_line() +
+  scale_x_date('month') +
+  ylab("Number of Trips") +
+  xlab("")
+
+##Data clean, smoothing outliers
+
+bostoncount_ts = ts(bostoncoll[, c('by100000')])
+
+bostoncoll$clean_cnt = tsclean(as.vector(bostoncount_ts))
+
+ggplot() +
+  geom_line(data = bostoncoll, aes(x = Date, y = clean_cnt)) +
+  ylab('Cleaned Number of Trips')
+
+#using the clean count with no outliers
+
+bostoncoll$cnt_ma = ma(bostoncoll$clean_cnt, order=7) 
+
+bostoncoll$cnt_ma30 = ma(bostoncoll$clean_cnt, order=30)
+
+ggplot() +
+  geom_line(data = bostoncoll, aes(x = Date, y = clean_cnt, colour = "Counts")) +
+  geom_line(data = bostoncoll, aes(x = Date, y = cnt_ma,   colour = "Weekly Moving Average"))  +
+  geom_line(data = bostoncoll, aes(x = Date, y = cnt_ma30, colour = "Monthly Moving Average"))  +
+  ylab('Number of Trips x 100000 person')
+
+##Chicago Moving Average
+
+chicagocoll$Date = as.Date(chicagocoll$start_time)
+
+ggplot(chicagocoll, aes(Date, by100000)) +
+  geom_line() +
+  scale_x_date('month') +
+  ylab("Number of Trips") +
+  xlab("")
+
+##Data clean, smoothing outliers
+
+chicagocount_ts = ts(chicagocoll[, c('by100000')])
+
+chicagocoll$clean_cnt = tsclean(as.vector(chicagocount_ts))
+
+ggplot() +
+  geom_line(data = chicagocoll, aes(x = Date, y = clean_cnt)) +
+  ylab('Cleaned Number of Trips')
+
+#using the clean count with no outliers
+
+chicagocoll$cnt_ma = ma(chicagocoll$clean_cnt, order=7) 
+
+chicagocoll$cnt_ma30 = ma(chicagocoll$clean_cnt, order=30)
+
+ggplot() +
+  geom_line(data = chicagocoll, aes(x = Date, y = clean_cnt, colour = "Counts")) +
+  geom_line(data = chicagocoll, aes(x = Date, y = cnt_ma,   colour = "Weekly Moving Average"))  +
+  geom_line(data = chicagocoll, aes(x = Date, y = cnt_ma30, colour = "Monthly Moving Average"))  +
+  ylab('Number of Trips x 100000 person')
+
+##Washington moving average
+
+washingtoncoll$Date = as.Date(washingtoncoll$start_time)
+
+ggplot(washingtoncoll, aes(Date, by100000)) +
+  geom_line() +
+  scale_x_date('month') +
+  ylab("Number of Trips") +
+  xlab("")
+
+##Data clean, smoothing outliers
+
+washcount_ts = ts(washingtoncoll[, c('by100000')])
+
+washingtoncoll$clean_cnt = tsclean(as.vector(washcount_ts))
+
+ggplot() +
+  geom_line(data = washingtoncoll, aes(x = Date, y = clean_cnt)) +
+  ylab('Cleaned Number of Trips')
+
+#using the clean count with no outliers
+
+washingtoncoll$cnt_ma = ma(washingtoncoll$clean_cnt, order=7) 
+
+washingtoncoll$cnt_ma30 = ma(washingtoncoll$clean_cnt, order=30)
+
+ggplot() +
+  geom_line(data = washingtoncoll, aes(x = Date, y = clean_cnt, colour = "Counts")) +
+  geom_line(data = washingtoncoll, aes(x = Date, y = cnt_ma,   colour = "Weekly Moving Average"))  +
+  geom_line(data = washingtoncoll, aes(x = Date, y = cnt_ma30, colour = "Monthly Moving Average"))  +
+  ylab('Number of Trips x 100000 person')
+
+##Philly Moving Average
+
+phillycoll$Date = as.Date(phillycoll$start_time)
+
+ggplot(phillycoll, aes(Date, by100000)) +
+  geom_line() +
+  scale_x_date('month') +
+  ylab("Number of Trips") +
+  xlab("")
+
+##Data clean, smoothing outliers
+
+phillycount_ts = ts(phillycoll[, c('by100000')])
+
+phillycoll$clean_cnt = tsclean(as.vector(phillycount_ts))
+
+ggplot() +
+  geom_line(data = phillycoll, aes(x = Date, y = clean_cnt)) +
+  ylab('Cleaned Number of Trips')
+
+#using the clean count with no outliers
+
+phillycoll$cnt_ma = ma(phillycoll$clean_cnt, order=7) 
+
+phillycoll$cnt_ma30 = ma(phillycoll$clean_cnt, order=30)
+
+ggplot() +
+  geom_line(data = phillycoll, aes(x = Date, y = clean_cnt, colour = "Counts")) +
+  geom_line(data = phillycoll, aes(x = Date, y = cnt_ma,   colour = "Weekly Moving Average"))  +
+  geom_line(data = phillycoll, aes(x = Date, y = cnt_ma30, colour = "Monthly Moving Average"))  +
+  ylab('Number of Trips x 100000 person')
+
+##Decompose data
+
+count_ma = ts(na.omit(bostoncoll$cnt_ma), frequency=30)
+decomp = stl(count_ma, s.window="periodic")
+deseasonal_cnt <- seasadj(decomp)
+plot(decomp)
+
+##Dickey Fuller Test
+
+adf.test(count_ma, alternative = "stationary")
+
+## Auto-correlation plots
+
+Acf(count_ma, main='')
+
+Pacf(count_ma, main='')
+
+count_d1 = diff(deseasonal_cnt, differences = 1)
+plot(count_d1)
+adf.test(count_d1, alternative = "stationary")
+
+Acf(count_d1, main='ACF for Differenced Series')
+
+Pacf(count_d1, main='PACF for Differenced Series')
+
+##ARIMA test
+
+auto.arima(deseasonal_cnt, seasonal=FALSE)
+
+fit<-auto.arima(deseasonal_cnt, seasonal=FALSE)
+
+par(mar = rep(2, 4))
+
+tsdisplay(residuals(fit), lag.max=45, main='(1,1,1) Model Residuals')
+
+fit2 = arima(deseasonal_cnt, order=c(1,1,7))
+
+fit2
+
+tsdisplay(residuals(fit2), lag.max=15, main='Seasonal Model Residuals')
+
+fcast <- forecast(fit2, h=30)
+plot(fcast)
+
+hold <- window(ts(deseasonal_cnt), start=200)
+
+fit_no_holdout = arima(ts(deseasonal_cnt[-c(200:725)]), order=c(1,1,7))
+
+fcast_no_holdout <- forecast(fit_no_holdout,h=170)
+plot(fcast_no_holdout, main=" ")
+lines(ts(deseasonal_cnt))
+
+fit_w_seasonality = auto.arima(deseasonal_cnt, seasonal=TRUE)
+fit_w_seasonality
+seas_fcast <- forecast(fit_w_seasonality, h=30)
+plot(seas_fcast)
+```
+
 
 
