--- a/BikeshareStrikeWrangling.Rmd
+++ b/BikeshareStrikeWrangling.Rmd
@@ -19,117 +19,136 @@ library(stringr)
 library(knitr)
 library(dplyr)
 library(lubridate)
-library(anytime)
+library(magrittr)
 
 ## Chicago - Divvy
-divvy = list.files(pattern = "/Bikeshare Data/Divvy.*\\.csv")
+divvy = list.files(path = "./Bikeshare Data/", pattern = "Divvy.*\\.csv")
 
-cabi = list.files(pattern = "/Bikeshare Data/Cabi.*\\.csv")
-indeg = list.files(pattern = "/Indego/Bikeshare Data.*\\.csv")
-hubway = list.files(pattern = "/Hubway/Bikeshare Data.*\\.csv")
+### Washington - Cabi
+cabi = list.files(path = "./Bikeshare Data/", pattern = "Cabi.*\\.csv")
+
+### Philly - Indego
+indeg = list.files(path = "./Bikeshare Data/", pattern = "Indego.*\\.csv")
+
+### Boston - Hubway
+hubway = list.files(path = "./Bikeshare Data/", pattern = "Hubway.*\\.csv")
 ```
 
 ## Chicago
 
 ```{r}
-chicago <- do.call(rbind, lapply(divvy, function(x) read.csv(x, stringsAsFactors = FALSE)))
+chicago <- divvy %>% 
+    map(function(x) {
+        read.csv(paste0("./Bikeshare Data/", x))
+    }) %>%
+    reduce(rbind)
+
 chicago$city <- "Chicago"
 head(chicago)
 
-chicago$starttime <- gsub(" .*", "", chicago$starttime)
-chicago$stoptime <- gsub(" .*", "", chicago$stoptime)
-
 chicagoClean <- subset(chicago, select = c(trip_id, tripduration, starttime, stoptime, usertype, city), stringsAsFactors = FALSE)
-
 names(chicagoClean) <- c("trip_id", "duration", "start_time", "end_time", "passholder_type", "city")
 head(chicagoClean)
 
-lct <- Sys.getlocale("LC_TIME"); Sys.setlocale("LC_TIME", "C")
+## Clean Start Time
+chicagoClean$start_time <- gsub(" .*", "", chicagoClean$start_time)
+chicagoClean$start_time <- mdy(chicagoClean$start_time)
 
-tester <- c("1/1/2016", "2/28/2016")
-anydate(tester)
-chicagoClean$start_time <- as.POSIXct(chicagoClean$start_time, format='%m/%d/%Y')
-chicagoClean$end_time <- as.POSIXct(chicagoClean$end_time, format='%m/%d/%Y')
+## Clean End Time
+chicagoClean$end_time <- gsub(" .*", "", chicagoClean$end_time)
+chicagoClean$end_time <- mdy(chicagoClean$end_time)
+
+head(chicagoClean)
 ```
 
 ## Boston
 
 ```{r}
-Boston = do.call(rbind, lapply(hubway, function(x) read.csv(x, stringsAsFactors = FALSE)))
-Boston$city <- "Boston"
-head(Boston)
+boston <- hubway %>% 
+    map(function(x) {
+        read.csv(paste0("./Bikeshare Data/", x))
+    }) %>%
+    reduce(rbind)
 
-Boston$ID <- seq.int(nrow(Boston))
+boston$city <- "Boston"
+boston$trip_id <- seq.int(nrow(boston))
+head(boston)
 
-bostonClean2 <- subset(Boston, select = c(ID, tripduration, starttime, stoptime, usertype, city))
+
+bostonClean <- subset(boston, select = c(trip_id, tripduration, starttime, stoptime, usertype, city), stringsAsFactors = FALSE)
+names(bostonClean) <- c("trip_id", "duration", "start_time", "end_time", "passholder_type", "city")
 head(bostonClean)
 
-names(bostonClean2) <- c("trip_id", "duration", "start_time", "end_time", "passholder_type", "city")
+## Clean Start Time
+bostonClean$start_time <- gsub(" .*", "", bostonClean$start_time)
+bostonClean$start_time <- ymd(bostonClean$start_time)
 
-gsub("-", "/", bostonClean2$start_time)
-bostonClean2$newdate <- strftime(as.character(bostonClean2$start_time), "%m/%d/%Y")
+## Clean End Time
+bostonClean$end_time <- gsub(" .*", "", bostonClean$end_time)
+bostonClean$end_time <- ymd(bostonClean$end_time)
 
-gsub("-", "/", bostonClean$end_time)
-bostonClean2$newenddate <- strftime(as.character(bostonClean2$end_time), "%m/%d/%Y")
-
-bostonClean <- subset(bostonClean2, select = c(trip_id, duration, newdate, newenddate, passholder_type, city))
-names(bostonClean) <- c("trip_id", "duration", "start_time", "end_time", "passholder_type", "city")
-format(as.Date(bostonClean$start_time, "%m %d %Y"))
-
-bostonClean$start_time <- as.POSIXct(bostonClean$start_time, format='%m/%d/%Y')
-bostonClean$end_time <- as.POSIXct(bostonClean$end_time, format='%m/%d/%Y')
 head(bostonClean)
 ```
 
 ##Philly
 ```{r}
-philly = do.call(rbind, lapply(indeg, function(x) read.csv(x, stringsAsFactors = FALSE)))
+philly <- indeg %>% 
+    map(function(x) {
+        read.csv(paste0("./Bikeshare Data/", x))
+    }) %>%
+    reduce(rbind)
+
 philly$city <- "Philly"
 head(philly)
 
-philly$end_time <- gsub(" .*", "", philly$end_time)
-philly$start_time <- gsub(" .*", "", philly$start_time)
-
-phillyClean <- subset(philly, select = c(trip_id, duration, start_time, end_time, passholder_type, city))
+phillyClean <- subset(philly, select = c(trip_id, duration, start_time, end_time, passholder_type, city), stringsAsFactors = FALSE)
 names(phillyClean) <- c("trip_id", "duration", "start_time", "end_time", "passholder_type", "city")
+head(phillyClean)
 
-tester <- c("1/1/16", "01/1/2016", "02/02/15", "02/02/2015")
+## Clean Start Time
+phillyClean$start_time <- gsub(" .*", "", phillyClean$start_time)
+phillyClean$start_time <- mdy(phillyClean$start_time)
 
-parse_date_time(phillyClean$start_time, c('%m%d%y', '%m%d%Y'))
-format(phillyClean$start_time, '%m%d%Y')
-format(phillyClean$end_time, '%m%d%Y')
+## Clean End Time
+phillyClean$end_time <- gsub(" .*", "", phillyClean$end_time)
+phillyClean$end_time <- mdy(phillyClean$end_time)
 
-
-
-phillyClean$start_time <- as.POSIXct(phillyClean$start_time, format='%m/%d/%Y')
-phillyClean$end_time <- as.POSIXct(phillyClean$end_time, format='%m/%d/%Y')
 head(phillyClean)
 ```
 
 ##Washington 
 ```{r}
-washington = do.call(rbind, lapply(cabi, function(x) read.csv(x, stringsAsFactors = FALSE)))
-washington$city = "Washington"
-washington$start_time <- gsub(" .*", "", washington$start_time)
-washington$end_time <- gsub(" .*", "", washington$end_time)
+washington <- cabi %>% 
+    map(function(x) {
+        read.csv(paste0("./Bikeshare Data/", x))
+    }) %>%
+    reduce(rbind)
 
+washington$city <- "Washington"
 head(washington)
 
-washingtonClean <- subset(washington, select = c("trip_id", "duration", "start_time", "end_time", "passholder_type", "city"))
+washingtonClean <- subset(washington, select = c(trip_id, duration, start_time, end_time, passholder_type, city), stringsAsFactors = FALSE)
 names(washingtonClean) <- c("trip_id", "duration", "start_time", "end_time", "passholder_type", "city")
+head(washingtonClean)
 
-washingtonClean$start_time <- as.POSIXct(washingtonClean$start_time, format='%m/%d/%Y')
-washingtonClean$end_time <- as.POSIXct(washingtonClean$end_time, format='%m/%d/%Y', '%m/%d/%y')
-washingtonClean$duration <- washingtonClean$duration/1000
+## Clean Start Time
+washingtonClean$start_time <- gsub(" .*", "", washingtonClean$start_time)
+washingtonClean$start_time <- mdy(washingtonClean$start_time)
+
+## Clean End Time
+washingtonClean$end_time <- gsub(" .*", "", washingtonClean$end_time)
+washingtonClean$end_time <- mdy(washingtonClean$end_time)
+
 head(washingtonClean)
 ```
 
 ## Appending data
 ```{r}
 strikeData <- rbind(chicagoClean, phillyClean, washingtonClean, bostonClean)
+strikeData <- filter(strikeData, year > 2015)
 head(strikeData)
 
-write.csv(strikeData, file = "C:/Users/Richard Buote/Desktop/strikeData.csv")
+write.csv(strikeData, file = "strikeData.csv")
 ```
 
 ## Cleaning and recoding
@@ -139,17 +158,21 @@ strikeData$month <- month(strikeData$start_time)
 strikeData$day <- day(strikeData$start_time)
 strikeData$year <- year(strikeData$start_time)
 
-strikeData <- filter(strikeData, year > 2015)
 
-strikeData$memberType <- car::recode(strikeData$passholder_type, "'Customer'='shortterm';
-'Subscriber'='member';
-                                     'Indego30'='member';
-                                     'IndegoFlex'='shortterm';
-                                     'Walk-up'='shortterm'; 
-                                     'Registered' = 'member';
-                                     'Casual' = 'shortterm';
-                                     'Dependent'=NA;",
-                                     as.factor.result = TRUE)
+##add dummy to CityColl
+
+strikeData$dummy <-  ifelse(strikeData$start_time >= as.Date("2016/11/01", format = "%Y/%m/%d"), 1, 0)
+
+strikeData$memberType <- recode_factor(strikeData$passholder_type, 
+                                    `Customer` = "shortterm",
+                                    `Subscriber` = "member",
+                                     `Indego30` = "member",
+                                     `IndegoFlex` = "shortterm",
+                                     `Walk-up` = "shortterm", 
+                                     `Registered` = "member",
+                                     `Casual` = "shortterm",
+                                     `Dependent` = "shortterm",
+                                     `Member` = "member")
 
 table(strikeData$memberType, strikeData$passholder_type)
 
@@ -157,8 +180,29 @@ table(strikeData$passholder_type)
 ```
 
 ```{r}
-strikeData1 <- strikeData %>% group_by(year, month, day, city) %>% summarise(sumDuration = sum(duration,
-                                                                                               na.rm = TRUE), mDuration = mean(duration, na.rm = TRUE), total = n())
+city_day_sum <- strikeData %>% 
+                    group_by(year, month, day, city) %>% 
+                          mutate(mDuration = mean(duration, na.rm = TRUE), 
+                                    number_trips = n())  %>% 
+                          distinct(year, month, day, city, .keep_all=TRUE)
+
+##Normalize by city pop
+## Boston - 667137 (6.67137)
+## Chicago - 2695598 (26.95598)
+## Washington - 672228 (6.72228)
+## Philly - 1567872 (15.67872)
+
+city_day_sum$by100000 <-
+        ifelse(city_day_sum$city == "Philly", city_day_sum$number_trips/15.67872, NA) %>%
+        ifelse(city_day_sum$city == "Washington", city_day_sum$number_trips/6.72228, .) %>%
+        ifelse(city_day_sum$city == "Chicago", city_day_sum$number_trips/26.95598, .) %>%
+        ifelse(city_day_sum$city == "Boston", city_day_sum$number_trips/6.67137, .) 
+
+city_day_sum <- arrange(city_day_sum, start_time)
+
+write.csv(city_day_sum, "city_day_sum1.csv")
+
+
 
 strikeData1$date = dmy(paste(strikeData1$day, strikeData1$month, strikeData1$year))
 
@@ -240,6 +284,7 @@ washingtoncoll$by100000 <- washingtoncoll$number_trips/6.72228
 phillycoll$by100000 <- phillycoll$number_trips/15.67872
 
 
+
 CityColl <- rbind(bostoncoll, chicagocoll, washingtoncoll, phillycoll)
 
 ##Remove before 2015 and order by date
@@ -260,7 +305,5 @@ chicagocoll <- subset(chicagocoll, start_time > "2015-12-31")
 washingtoncoll$start_time <- as.Date(washingtoncoll$start_time, format= "%Y-%m-%d")
 washingtoncoll <- subset(washingtoncoll, start_time > "2015-12-31")
 
-##add dummy to CityColl
 
-CityColl$dummy <-  ifelse(CityColl$start_time >= as.Date("2016/11/01", format = "%Y/%m/%d"), 1, 0)
 ```
